--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lotide",
   "version": "1.0.0",
-  "description": "",
+  "description": "mini clone of the lodash library",
   "main": "assertArraysEqual.js",
   "directories": {
     "test": "test"
@@ -13,7 +13,7 @@
     "type": "git",
     "url": "git+https://github.com/meteora277/lotide.git"
   },
-  "author": "",
+  "author": { "name": "Justin Diaz", "email": "justin.s.diaz@gmail.com", "url": "https://github.com/meteora277" },
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/meteora277/lotide/issues"
